--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -28,6 +28,8 @@
     button[type="submit"]{ padding:12px 18px; border:0; border-radius:10px; background:#0a7d32; color:#fff; font-weight:800; cursor:pointer; }
     .success { display:none; margin-top:10px; padding:10px 12px; border:1px solid #bfe3bf; background:#eefeef; border-radius:8px; color:#145214; }
     .notice, .hint { font-size:.92rem; color:var(--muted); }
+    .status { font-size:.9rem; color:#0a7d32; margin-top:6px; display:none; }
+    .status.error { color:#b91c1c; }
     footer .legal { text-align:center; display:block; margin: 24px 0 10px; }
     footer a { color:#333; }
     .shipbox { display:grid; grid-template-columns: 1fr 1fr; gap:16px; align-items:start; background:#f9fafb; border:1px dashed #cbd5e1; border-radius:12px; padding:12px; }
@@ -75,6 +77,7 @@
               <select id="mp_select"></select>
               <div class="hint" id="mp_hint"></div>
             </div>
+            <div id="mp_status" class="status" aria-live="polite"></div>
           </fieldset>
 
           <fieldset>
@@ -169,12 +172,12 @@ Mit freundlichen Grüßen
     </footer>
   </div>
 
-  <!-- MdB Lookup – nur aus Dropdown übernehmen; Blur prüft nur, wenn Dropdown sichtbar -->
+  <!-- MdB Lookup – robust mit Mehrpfad/Cachebuster + Statusanzeige -->
   <script>
   (function(){
     const $ = (s)=>document.querySelector(s);
     const elMSG=$('#message'), elMP=$('#abgeordneter'), elPLZ=$('#plz'), elCity=$('#city');
-    const selWrap=$('#mpSelectWrap'), elSel=$('#mp_select'), elHint=$('#mp_hint');
+    const selWrap=$('#mpSelectWrap'), elSel=$('#mp_select'), elHint=$('#mp_hint'), status=$('#mp_status');
 
     const clean=s=>String(s||'').replace(/^\s*nan\s+/i,'').trim();
     const norm=t=>String(t||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').replace(/[^\w\s-]/g,'').replace(/\s+/g,' ').trim().toLowerCase();
@@ -192,42 +195,58 @@ Mit freundlichen Grüßen
       return addComma(fallback||'Sehr geehrte Damen und Herren');
     }
 
-    async function loadTry(urls){ let err; for(const u of urls){ try{ const r=await fetch(u,{cache:'no-store'}); if(r.ok) return r.json(); err=new Error('HTTP '+r.status+' '+u);}catch(e){err=e;} } throw err; }
-    const loadPLZ2WK=()=>loadTry(['assets/data/plz_to_wk.json','plz_to_wk.json']);
-    const loadWK2MDB=()=>loadTry(['assets/data/wk_to_mdb.json','wk_to_mdb.json']);
-    const loadORT2WK=()=>loadTry(['assets/data/ort_to_wk.json','ort_to_wk.json']);
+    // ----- Loader mit Multi-Path + Cache-Buster
+    function urlVariants(file){
+      const v='?v=' + Date.now();
+      return [
+        'assets/data/'+file+v,
+        '/assets/data/'+file+v,
+        '../assets/data/'+file+v
+      ];
+    }
+    async function loadTry(files){
+      let lastErr;
+      for(const file of files){
+        for(const u of urlVariants(file)){
+          try{
+            const r=await fetch(u,{cache:'no-store'});
+            if(r.ok) return r.json();
+            lastErr = new Error('HTTP '+r.status+' '+u);
+          }catch(e){ lastErr=e; }
+        }
+      }
+      throw lastErr || new Error('Unbekannter Ladefehler');
+    }
+    const loadPLZ2WK=()=>loadTry(['plz_to_wk.json']);
+    const loadWK2MDB=()=>loadTry(['wk_to_mdb.json']);
+    const loadORT2WK=()=>loadTry(['ort_to_wk.json']);
+
+    function setStatus(msg, isError=false){
+      if(!status) return;
+      status.textContent = msg;
+      status.classList.toggle('error', !!isError);
+      status.style.display = 'block';
+    }
 
     async function findCandidates(plz,cityRaw){
       const [plzMap,wkMap,ortMap]=await Promise.all([loadPLZ2WK(),loadWK2MDB(),loadORT2WK()]);
-
-      // 1) Wahlkreise aus PLZ
-      let wks = [];
-      if (plzMap[plz]) wks = wks.concat([].concat(plzMap[plz]));
-
-      // 2) Fallback über Ort – mit beidseitiger Normalisierung (München/muenchen/munchen)
-      const key = norm(cityRaw||'');
-      if (key) {
-        for (const [k, arr] of Object.entries(ortMap)) {
-          if (norm(k).startsWith(key) || key.startsWith(norm(k))) {
-            wks = wks.concat([].concat(arr));
-          }
+      let wks=[];
+      if(plzMap[plz]) wks=wks.concat([].concat(plzMap[plz]));
+      const key=norm(cityRaw||'');
+      if(key){
+        for(const [k,arr] of Object.entries(ortMap)){
+          const nk = norm(k);
+          if(nk.startsWith(key) || key.startsWith(nk)){ wks=wks.concat([].concat(arr)); }
         }
       }
-
-      // eindeutige WKs
-      wks = Array.from(new Set(wks.map(String)));
-
+      wks=Array.from(new Set(wks.map(String)));
       const byName=new Map();
       for(const wk of wks){
-        const m=wkMap[String(wk)];
-        if(!m) continue;
-        const name=clean(m.mdb_name);
-        if(!name) continue;
+        const m=wkMap[String(wk)]; if(!m) continue;
+        const name=clean(m.mdb_name); if(!name) continue;
         const anrede=salutation(name, clean(m.anrede));
         const address=(m.bundestag_address||'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim();
-        if(!byName.has(name)){
-          byName.set(name,{name,anrede,address,party:clean(m.fraktion||m.party||''), wk:String(m.wk_nr||m.wk||'')});
-        }
+        if(!byName.has(name)){ byName.set(name,{name,anrede,address,party:clean(m.fraktion||m.party||''), wk:String(m.wk_nr||m.wk||'')}); }
       }
       return { candidates:[...byName.values()], wks };
     }
@@ -257,9 +276,9 @@ Mit freundlichen Grüßen
       if(!opt) return;
       setIntro(opt.dataset.anrede || 'Sehr geehrte Damen und Herren,', opt.dataset.address || 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin', name);
       elMP.value=name;
+      setStatus('1 Treffer: '+name);
     }
 
-    // Blur prüft nur, wenn Dropdown sichtbar ist
     elSel.addEventListener('change',()=>{ if(elSel.value) chooseByName(elSel.value); });
     elMP .addEventListener('blur', ()=>{
       const dropdownVisible = selWrap && selWrap.style.display !== 'none' && elSel.options.length > 0;
@@ -270,6 +289,7 @@ Mit freundlichen Grüßen
       else{
         elMP.value='';
         setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
+        setStatus('Kein gültiger Eintrag ausgewählt', true);
       }
     });
 
@@ -278,20 +298,34 @@ Mit freundlichen Grüßen
     let t=null; const debounce=(fn,ms)=>{ clearTimeout(t); t=setTimeout(fn,ms); };
     async function runLookup(){
       hideSelect();
-      const plz=(elPLZ.value||'').trim(); const city=(elCity.value||'').trim();
+      status.style.display='none';
+      const plz=(elPLZ.value||'').trim(), city=(elCity.value||'').trim();
       if(!/^\d{5}$/.test(plz) && city.length<2){
-        setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
-        return;
+        setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin',''); 
+        return; 
       }
       try{
         const {candidates,wks}=await findCandidates(plz,city);
-        if(candidates.length>1){ setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin',''); showSelect(candidates,wks); }
-        else if(candidates.length===1){ const c=candidates[0]; setIntro(c.anrede,c.address,c.name); elMP.value=c.name; hideSelect(); }
-        else { setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin',''); hideSelect(); }
+        if(candidates.length>1){
+          setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
+          showSelect(candidates,wks);
+          setStatus(candidates.length+' Treffer – bitte wählen');
+        }else if(candidates.length===1){
+          const c=candidates[0];
+          setIntro(c.anrede,c.address,c.name);
+          elMP.value=c.name;
+          hideSelect();
+          setStatus('1 Treffer: '+c.name);
+        }else{
+          setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
+          hideSelect();
+          setStatus('0 Treffer für '+plz+' '+city, true);
+        }
       }catch(e){
-        console.error(e);
         setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
         hideSelect();
+        setStatus('Fehler beim Laden der MdB-Daten: '+(e&&e.message?e.message:'unbekannt'), true);
+        console.error(e);
       }
     }
     elPLZ .addEventListener('input',()=>debounce(runLookup, (/^\d{5}$/.test(elPLZ.value||''))?0:300));
@@ -355,7 +389,7 @@ Mit freundlichen Grüßen
 
       const finalMsg = apply(userText, vals());
 
-      if (/\{Vorname\}|\{Nachname\}|\{Straße\}|\{PLZ}|\{Ort\}/.test(finalMsg)) {
+      if (/\{Vorname\}|\{Nachname\}|\{Straße\}|\{PLZ\}|\{Ort\}/.test(finalMsg)) {
         alert('Bitte füllen Sie Absenderfelder vollständig aus.');
         return;
       }
@@ -391,14 +425,6 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
 
 
 
