--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -15,7 +15,7 @@
     .hero a.logo { display:inline-block }
     .hero img { width:min(95vw, 540px); height:auto; display:block; filter:drop-shadow(0 6px 18px rgba(0,0,0,.25)); }
     .tagline { margin:8px 0 0; font-size:1.1rem; opacity:.95; }
-    .cta { display:inline-block; margin-top:10px; padding:10px 16px; background:#fff; color:#0a7d2; text-decoration:none; border-radius:10px; font-weight:700; }
+    .cta { display:inline-block; margin-top:10px; padding:10px 16px; background:#fff; color:#0a7d32; text-decoration:none; border-radius:10px; font-weight:700; }
     main.middle > section { margin:22px 0; }
     fieldset { border:1px solid #e6e6e6; border-radius:12px; padding:16px; margin:18px 0; }
     legend { padding:0 6px; font-weight:700; color:#0b4d25; }
@@ -28,6 +28,9 @@
     button[type="submit"]{ padding:12px 18px; border:0; border-radius:10px; background:#0a7d32; color:#fff; font-weight:800; cursor:pointer; }
     .success { display:none; margin-top:10px; padding:10px 12px; border:1px solid #bfe3bf; background:#eefeef; border-radius:8px; color:#145214; }
     .notice, .hint { font-size:.92rem; color:var(--muted); }
+    .status { font-size:.92rem; color:#0a7d32; margin-top:6px; display:none; cursor:pointer; user-select:none; }
+    .status strong { text-decoration: underline; }
+    .status.error { color:#b91c1c; cursor:default; text-decoration:none; }
     footer .legal { text-align:center; display:block; margin: 24px 0 10px; }
     footer a { color:#333; }
     .shipbox { display:grid; grid-template-columns: 1fr 1fr; gap:16px; align-items:start; background:#f9fafb; border:1px dashed #cbd5e1; border-radius:12px; padding:12px; }
@@ -75,6 +78,7 @@
               <select id="mp_select"></select>
               <div class="hint" id="mp_hint"></div>
             </div>
+            <div id="mp_status" class="status" aria-live="polite"></div>
           </fieldset>
 
           <fieldset>
@@ -169,12 +173,12 @@ Mit freundlichen Grüßen
     </footer>
   </div>
 
-  <!-- MdB Lookup – nur aus Dropdown übernehmen; Intro nachträglich aktualisierbar -->
+  <!-- MdB Lookup – Statuszeile mit Klick-Action -->
   <script>
   (function(){
     const $ = (s)=>document.querySelector(s);
     const elMSG=$('#message'), elMP=$('#abgeordneter'), elPLZ=$('#plz'), elCity=$('#city');
-    const selWrap=$('#mpSelectWrap'), elSel=$('#mp_select'), elHint=$('#mp_hint');
+    const selWrap=$('#mpSelectWrap'), elSel=$('#mp_select'), elHint=$('#mp_hint'), status=$('#mp_status');
 
     const clean=s=>String(s||'').replace(/^\s*nan\s+/i,'').trim();
     const norm=t=>String(t||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').replace(/[^\w\s-]/g,'').replace(/\s+/g,' ').trim().toLowerCase();
@@ -192,6 +196,7 @@ Mit freundlichen Grüßen
       return addComma(fallback||'Sehr geehrte Damen und Herren');
     }
 
+    // Multi-Pfad Loader (wie Basis)
     async function loadTry(urls){ let err; for(const u of urls){ try{ const r=await fetch(u,{cache:'no-store'}); if(r.ok) return r.json(); err=new Error('HTTP '+r.status+' '+u);}catch(e){err=e;} } throw err; }
     const loadPLZ2WK=()=>loadTry(['assets/data/plz_to_wk.json','plz_to_wk.json']);
     const loadWK2MDB=()=>loadTry(['assets/data/wk_to_mdb.json','wk_to_mdb.json']);
@@ -201,12 +206,14 @@ Mit freundlichen Grüßen
       const [plzMap,wkMap,ortMap]=await Promise.all([loadPLZ2WK(),loadWK2MDB(),loadORT2WK()]);
       let wks=[];
       if(plzMap[plz]) wks=wks.concat([].concat(plzMap[plz]));
-      const key=norm(cityRaw);
-      if(!wks.length && key){
-        if(ortMap[key]) wks=wks.concat([].concat(ortMap[key]));
-        if(!wks.length){ for(const [k,arr] of Object.entries(ortMap)){ if(norm(k).startsWith(key)) wks=wks.concat([].concat(arr)); } }
+      const key=norm(cityRaw||'');
+      if(key){
+        for(const [k,arr] of Object.entries(ortMap)){
+          const nk=norm(k);
+          if(nk.startsWith(key) || key.startsWith(nk)) wks=wks.concat([].concat(arr));
+        }
       }
-      wks=Array.from(new Set(wks.map(String)));
+      wks=[...new Set(wks.map(String))];
 
       const byName=new Map();
       for(const wk of wks){
@@ -214,36 +221,53 @@ Mit freundlichen Grüßen
         const name=clean(m.mdb_name); if(!name) continue;
         const anrede=salutation(name, clean(m.anrede));
         const address=(m.bundestag_address||'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim();
-        if(!byName.has(name)){ byName.set(name,{name,anrede,address,party:clean(m.fraktion||m.party||''), wk:String(m.wk_nr||m.wk||'')}); }
+        if(!byName.has(name)) byName.set(name,{name,anrede,address,party:clean(m.fraktion||m.party||''), wk:String(m.wk_nr||m.wk||'')});
       }
       return { candidates:[...byName.values()], wks };
     }
 
-    // *** NEU: Intro block ist nachträglich ersetzbar (Platzhalter ODER vorheriger Inhalt) ***
+    // Intro (nachträgliche Ersetzung bleibt wie in deiner Basis)
     function setIntro(anrede, addr, name){
-      const newAddr = (name?name+'\n':'') + String(addr||'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim();
-      const newSal  = /,\s*$/.test(anrede||'') ? anrede : ((anrede||'Sehr geehrte Damen und Herren') + ',');
-
-      const hasTokens = /\{MdB_Name_und_Adresse\}|\{MdB_Adresse\}|\{Anrede\}/.test(elMSG.value||'');
-      let txt = String(elMSG.value||'');
-
-      if (hasTokens) {
-        txt = txt
-          .replace('{MdB_Name_und_Adresse}', newAddr)
-          .replace('{MdB_Adresse}', newAddr)
-          .replace('{Anrede}', newSal);
-      } else {
-        // bereits eingefügt → ersetze den bisherigen Block durch den neuen
-        const prevAddr = elMSG.dataset.recipientAddr || '';
-        const prevSal  = elMSG.dataset.salutation || '';
-        if (prevAddr && txt.includes(prevAddr)) txt = txt.replace(prevAddr, newAddr);
-        if (prevSal  && txt.includes(prevSal))  txt = txt.replace(prevSal,  newSal);
+      const newAddr=(name?name+'\n':'')+String(addr||'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim();
+      const newSal=/,\s*$/.test(anrede||'')?anrede:((anrede||'Sehr geehrte Damen und Herren')+',');
+      const hasTokens=/\{MdB_Name_und_Adresse\}|\{MdB_Adresse\}|\{Anrede\}/.test(elMSG.value||'');
+      let txt=String(elMSG.value||'');
+      if(hasTokens){
+        txt=txt.replace('{MdB_Name_und_Adresse}',newAddr).replace('{MdB_Adresse}',newAddr).replace('{Anrede}',newSal);
+      }else{
+        const prevAddr=elMSG.dataset.recipientAddr||'';
+        const prevSal=elMSG.dataset.salutation||'';
+        if(prevAddr && txt.includes(prevAddr)) txt=txt.replace(prevAddr,newAddr);
+        if(prevSal && txt.includes(prevSal)) txt=txt.replace(prevSal,newSal);
       }
-
-      elMSG.value = txt;
-      elMSG.dataset.recipientAddr = newAddr;
-      elMSG.dataset.salutation    = newSal;
+      elMSG.value=txt;
+      elMSG.dataset.recipientAddr=newAddr;
+      elMSG.dataset.salutation=newSal;
     }
+
+    // Status-UI
+    function setStatusMultiple(count){
+      status.classList.remove('error');
+      status.style.display='block';
+      status.innerHTML = `<strong>${count} Treffer – auswählen</strong>`;
+      status.onclick = () => {
+        selWrap.style.display='block';
+        elSel.focus();
+      };
+    }
+    function setStatusSingle(name){
+      status.classList.remove('error');
+      status.style.display='block';
+      status.innerHTML = `<strong>1 Treffer: ${name} – übernehmen</strong>`;
+      status.onclick = () => chooseByName(name);
+    }
+    function setStatusNone(text){
+      status.classList.add('error');
+      status.style.display='block';
+      status.textContent = text;
+      status.onclick = null;
+    }
+    function clearStatus(){ status.style.display='none'; status.onclick=null; }
 
     function hideSelect(){ selWrap.style.display='none'; elSel.innerHTML=''; elHint.textContent=''; }
     function showSelect(cands,wks){
@@ -259,19 +283,17 @@ Mit freundlichen Grüßen
       if(!opt) return;
       setIntro(opt.dataset.anrede || 'Sehr geehrte Damen und Herren,', opt.dataset.address || 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin', name);
       elMP.value=name;
+      setStatusSingle(name); // bleibt klickbar
+      hideSelect();
     }
 
     elSel.addEventListener('change',()=>{ if(elSel.value) chooseByName(elSel.value); });
-    elMP .addEventListener('blur', ()=>{
+    elMP.addEventListener('blur', ()=>{
       const dropdownVisible = selWrap && selWrap.style.display !== 'none' && elSel.options.length > 0;
       if(!dropdownVisible) return;
       const n=(elMP.value||'').trim();
       const isValid=[...elSel.options].some(o=>o.value===n);
       if(isValid){ chooseByName(n); }
-      else{
-        elMP.value='';
-        setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
-      }
     });
 
     document.addEventListener('DOMContentLoaded', ()=>{ elMP.value=''; });
@@ -279,6 +301,7 @@ Mit freundlichen Grüßen
     let t=null; const debounce=(fn,ms)=>{ clearTimeout(t); t=setTimeout(fn,ms); };
     async function runLookup(){
       hideSelect();
+      clearStatus();
       const plz=(elPLZ.value||'').trim(); const city=(elCity.value||'').trim();
       if(!/^\d{5}$/.test(plz) && city.length<2){
         setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin',''); 
@@ -286,13 +309,26 @@ Mit freundlichen Grüßen
       }
       try{
         const {candidates,wks}=await findCandidates(plz,city);
-        if(candidates.length>1){ setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin',''); showSelect(candidates,wks); }
-        else if(candidates.length===1){ const c=candidates[0]; setIntro(c.anrede,c.address,c.name); elMP.value=c.name; hideSelect(); }
-        else { setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin',''); hideSelect(); }
+        if(candidates.length>1){
+          setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
+          showSelect(candidates,wks);
+          setStatusMultiple(candidates.length);
+        }else if(candidates.length===1){
+          const c=candidates[0];
+          setIntro(c.anrede,c.address,c.name);
+          elMP.value=c.name;
+          hideSelect();
+          setStatusSingle(c.name);
+        }else{
+          setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
+          hideSelect();
+          setStatusNone('Keine Treffer für die eingegebenen Daten.');
+        }
       }catch(e){
-        console.error(e);
         setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
         hideSelect();
+        setStatusNone('Fehler beim Laden der MdB-Daten.');
+        console.error(e);
       }
     }
     elPLZ .addEventListener('input',()=>debounce(runLookup, (/^\d{5}$/.test(elPLZ.value||''))?0:300));
@@ -302,7 +338,7 @@ Mit freundlichen Grüßen
   })();
   </script>
 
-  <!-- Token Handling mit Live-Vorschau + finalem Submit -->
+  <!-- Token Handling mit Live-Vorschau + finalem Submit (unverändert) -->
   <script>
   (function(){
     const $=(s)=>document.querySelector(s);
@@ -331,7 +367,6 @@ Mit freundlichen Grüßen
       return out.replace(/\n{3,}/g,'\n\n').trimEnd();
     }
 
-    // Live-Vorschau nur für Absenderblock
     const TOKENS=['{Vorname}','{Nachname}','{Straße}','{PLZ}','{Ort}'];
     function renderSenderPreview(){
       if(!msg) return;
@@ -342,7 +377,6 @@ Mit freundlichen Grüßen
     ['#first_name','#last_name','#street','#sender_zip','#sender_city','#plz','#city'].forEach(sel=>$(sel)?.addEventListener('blur',renderSenderPreview));
     document.addEventListener('DOMContentLoaded',renderSenderPreview);
 
-    // Finaler Submit
     form?.addEventListener('submit', async (e)=>{
       e.preventDefault();
       const sal  = msg?.dataset?.salutation    || 'Sehr geehrte Damen und Herren,';
@@ -392,6 +426,7 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
 
 
 
