--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -15,7 +15,7 @@
     .hero a.logo { display:inline-block }
     .hero img { width:min(95vw, 540px); height:auto; display:block; filter:drop-shadow(0 6px 18px rgba(0,0,0,.25)); }
     .tagline { margin:8px 0 0; font-size:1.1rem; opacity:.95; }
-    .cta { display:inline-block; margin-top:10px; padding:10px 16px; background:#fff; color:#0a7d32; text-decoration:none; border-radius:10px; font-weight:700; }
+    .cta { display:inline-block; margin-top:10px; padding:10px 16px; background:#fff; color:#0a7d2; text-decoration:none; border-radius:10px; font-weight:700; }
     main.middle > section { margin:22px 0; }
     fieldset { border:1px solid #e6e6e6; border-radius:12px; padding:16px; margin:18px 0; }
     legend { padding:0 6px; font-weight:700; color:#0b4d25; }
@@ -27,10 +27,7 @@
     .actions { margin-top:16px; display:flex; gap:12px; align-items:center; }
     button[type="submit"]{ padding:12px 18px; border:0; border-radius:10px; background:#0a7d32; color:#fff; font-weight:800; cursor:pointer; }
     .success { display:none; margin-top:10px; padding:10px 12px; border:1px solid #bfe3bf; background:#eefeef; border-radius:8px; color:#145214; }
-    .notice, .hint, .status { font-size:.92rem; color:var(--muted); }
-    .status { color:#0a7d32; margin-top:6px; display:none; cursor:pointer; user-select:none; }
-    .status strong { text-decoration: underline; }
-    .status.error { color:#b91c1c; cursor:default; text-decoration:none; }
+    .notice, .hint { font-size:.92rem; color:var(--muted); }
     footer .legal { text-align:center; display:block; margin: 24px 0 10px; }
     footer a { color:#333; }
     .shipbox { display:grid; grid-template-columns: 1fr 1fr; gap:16px; align-items:start; background:#f9fafb; border:1px dashed #cbd5e1; border-radius:12px; padding:12px; }
@@ -78,7 +75,6 @@
               <select id="mp_select"></select>
               <div class="hint" id="mp_hint"></div>
             </div>
-            <div id="mp_status" class="status" aria-live="polite"></div>
           </fieldset>
 
           <fieldset>
@@ -173,11 +169,12 @@ Mit freundlichen Grüßen
     </footer>
   </div>
 
+  <!-- MdB Lookup – nur aus Dropdown übernehmen; Intro nachträglich aktualisierbar -->
   <script>
   (function(){
     const $ = (s)=>document.querySelector(s);
     const elMSG=$('#message'), elMP=$('#abgeordneter'), elPLZ=$('#plz'), elCity=$('#city');
-    const selWrap=$('#mpSelectWrap'), elSel=$('#mp_select'), elHint=$('#mp_hint'), status=$('#mp_status');
+    const selWrap=$('#mpSelectWrap'), elSel=$('#mp_select'), elHint=$('#mp_hint');
 
     const clean=s=>String(s||'').replace(/^\s*nan\s+/i,'').trim();
     const norm=t=>String(t||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').replace(/[^\w\s-]/g,'').replace(/\s+/g,' ').trim().toLowerCase();
@@ -216,58 +213,37 @@ Mit freundlichen Grüßen
         const m=wkMap[String(wk)]; if(!m) continue;
         const name=clean(m.mdb_name); if(!name) continue;
         const anrede=salutation(name, clean(m.anrede));
-        const address=(m.bundestag_address||'Platz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim();
+        const address=(m.bundestag_address||'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim();
         if(!byName.has(name)){ byName.set(name,{name,anrede,address,party:clean(m.fraktion||m.party||''), wk:String(m.wk_nr||m.wk||'')}); }
       }
       return { candidates:[...byName.values()], wks };
     }
 
-    // ---- FIX: "Deutscher Bundestag" stets einfügen, falls im Datensatz fehlt ----
-    function normalizeBtAddr(addr){
-      const lines=String(addr||'').split('\n').map(s=>s.trim()).filter(Boolean);
-      const hasHeader=lines.some(l=>/deutscher\s+bundestag/i.test(l));
-      const body=hasHeader ? lines : ['Deutscher Bundestag', ...lines];
-      // Duplikate vermeiden
-      const uniq=[]; for(const l of body){ if(uniq[uniq.length-1]!==l) uniq.push(l); }
-      return uniq.join('\n');
-    }
-
-    // ersetzbarer Intro-Block (mit Address-Normalisierung)
+    // *** NEU: Intro block ist nachträglich ersetzbar (Platzhalter ODER vorheriger Inhalt) ***
     function setIntro(anrede, addr, name){
-      const addrNorm = normalizeBtAddr(addr || 'Platz der Republik 1\n11011 Berlin');
-      const newAddr  = (name?name+'\n':'') + addrNorm;
-      const newSal   = /,\s*$/.test(anrede||'') ? anrede : ((anrede||'Sehr geehrte Damen und Herren')+',');
+      const newAddr = (name?name+'\n':'') + String(addr||'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim();
+      const newSal  = /,\s*$/.test(anrede||'') ? anrede : ((anrede||'Sehr geehrte Damen und Herren') + ',');
 
-      const hasTokens=/\{MdB_Name_und_Adresse\}|\{MdB_Adresse\}|\{Anrede\}/.test(elMSG.value||'');
-      let txt=String(elMSG.value||'');
-      if(hasTokens){
-        txt=txt.replace('{MdB_Name_und_Adresse}',newAddr).replace('{MdB_Adresse}',newAddr).replace('{Anrede}',newSal);
-      }else{
-        const prevAddr=elMSG.dataset.recipientAddr||'';
-        const prevSal =elMSG.dataset.salutation||'';
-        if(prevAddr && txt.includes(prevAddr)) txt=txt.replace(prevAddr,newAddr);
-        if(prevSal  && txt.includes(prevSal))  txt=txt.replace(prevSal,newSal);
+      const hasTokens = /\{MdB_Name_und_Adresse\}|\{MdB_Adresse\}|\{Anrede\}/.test(elMSG.value||'');
+      let txt = String(elMSG.value||'');
+
+      if (hasTokens) {
+        txt = txt
+          .replace('{MdB_Name_und_Adresse}', newAddr)
+          .replace('{MdB_Adresse}', newAddr)
+          .replace('{Anrede}', newSal);
+      } else {
+        // bereits eingefügt → ersetze den bisherigen Block durch den neuen
+        const prevAddr = elMSG.dataset.recipientAddr || '';
+        const prevSal  = elMSG.dataset.salutation || '';
+        if (prevAddr && txt.includes(prevAddr)) txt = txt.replace(prevAddr, newAddr);
+        if (prevSal  && txt.includes(prevSal))  txt = txt.replace(prevSal,  newSal);
       }
-      elMSG.value=txt;
-      elMSG.dataset.recipientAddr=newAddr;
-      elMSG.dataset.salutation=newSal;
-    }
 
-    // Statusanzeige (grün)
-    function setStatusMultiple(count){
-      const s=$('#mp_status'); s.classList.remove('error'); s.style.display='block';
-      s.innerHTML=`<strong>${count} Treffer – auswählen</strong>`;
-      s.onclick=()=>{ selWrap.style.display='block'; elSel.focus(); };
+      elMSG.value = txt;
+      elMSG.dataset.recipientAddr = newAddr;
+      elMSG.dataset.salutation    = newSal;
     }
-    function setStatusSingle(name){
-      const s=$('#mp_status'); s.classList.remove('error'); s.style.display='block';
-      s.innerHTML=`<strong>1 Treffer: ${name} – übernehmen</strong>`;
-      s.onclick=()=>chooseByName(name);
-    }
-    function setStatusNone(text){
-      const s=$('#mp_status'); s.classList.add('error'); s.style.display='block'; s.textContent=text; s.onclick=null;
-    }
-    function clearStatus(){ const s=$('#mp_status'); s.style.display='none'; s.onclick=null; }
 
     function hideSelect(){ selWrap.style.display='none'; elSel.innerHTML=''; elHint.textContent=''; }
     function showSelect(cands,wks){
@@ -281,44 +257,42 @@ Mit freundlichen Grüßen
     function chooseByName(name){
       const opt=[...elSel.options].find(o=>o.value===name);
       if(!opt) return;
-      setIntro(opt.dataset.anrede || 'Sehr geehrte Damen und Herren,', opt.dataset.address || 'Platz der Republik 1\n11011 Berlin', name);
+      setIntro(opt.dataset.anrede || 'Sehr geehrte Damen und Herren,', opt.dataset.address || 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin', name);
       elMP.value=name;
-      setStatusSingle(name);
-      hideSelect();
     }
 
     elSel.addEventListener('change',()=>{ if(elSel.value) chooseByName(elSel.value); });
-    elMP.addEventListener('blur', ()=>{
+    elMP .addEventListener('blur', ()=>{
       const dropdownVisible = selWrap && selWrap.style.display !== 'none' && elSel.options.length > 0;
       if(!dropdownVisible) return;
       const n=(elMP.value||'').trim();
       const isValid=[...elSel.options].some(o=>o.value===n);
       if(isValid){ chooseByName(n); }
+      else{
+        elMP.value='';
+        setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
+      }
     });
 
     document.addEventListener('DOMContentLoaded', ()=>{ elMP.value=''; });
 
     let t=null; const debounce=(fn,ms)=>{ clearTimeout(t); t=setTimeout(fn,ms); };
     async function runLookup(){
-      hideSelect(); clearStatus();
-      const plz=(elPLZ.value||'').trim(), city=(elCity.value||'').trim();
+      hideSelect();
+      const plz=(elPLZ.value||'').trim(); const city=(elCity.value||'').trim();
       if(!/^\d{5}$/.test(plz) && city.length<2){
-        setIntro('Sehr geehrte Damen und Herren,','Platz der Republik 1\n11011 Berlin',''); 
+        setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin',''); 
         return; 
       }
       try{
         const {candidates,wks}=await findCandidates(plz,city);
-        if(candidates.length>1){
-          setIntro('Sehr geehrte Damen und Herren,','Platz der Republik 1\n11011 Berlin','');
-          showSelect(candidates,wks); setStatusMultiple(candidates.length);
-        }else if(candidates.length===1){
-          const c=candidates[0];
-          setIntro(c.anrede,c.address,c.name); elMP.value=c.name; hideSelect(); setStatusSingle(c.name);
-        }else{
-          setIntro('Sehr geehrte Damen und Herren,','Platz der Republik 1\n11011 Berlin',''); hideSelect(); setStatusNone('Keine Treffer für die eingegebenen Daten.');
-        }
+        if(candidates.length>1){ setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin',''); showSelect(candidates,wks); }
+        else if(candidates.length===1){ const c=candidates[0]; setIntro(c.anrede,c.address,c.name); elMP.value=c.name; hideSelect(); }
+        else { setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin',''); hideSelect(); }
       }catch(e){
-        setIntro('Sehr geehrte Damen und Herren,','Platz der Republik 1\n11011 Berlin',''); hideSelect(); setStatusNone('Fehler beim Laden der MdB-Daten.'); console.error(e);
+        console.error(e);
+        setIntro('Sehr geehrte Damen und Herren,','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
+        hideSelect();
       }
     }
     elPLZ .addEventListener('input',()=>debounce(runLookup, (/^\d{5}$/.test(elPLZ.value||''))?0:300));
@@ -328,7 +302,7 @@ Mit freundlichen Grüßen
   })();
   </script>
 
-  <!-- Token-Handling + Submit -->
+  <!-- Token Handling mit Live-Vorschau + finalem Submit -->
   <script>
   (function(){
     const $=(s)=>document.querySelector(s);
@@ -340,42 +314,86 @@ Mit freundlichen Grüßen
     const topPLZ=()=>($('#plz')?.value||'').trim();
     const topCity=()=>($('#city')?.value||'').trim();
 
-    function vals(){ const m={}; for(const [t,sel] of Object.entries(F)){ let v=($(sel)?.value||'').trim();
-      if(t==='{Straße}') v=cleanStreet(v); if(t==='{PLZ}'&&!v) v=topPLZ(); if(t==='{Ort}'&&!v) v=topCity(); m[t]=v; } return m; }
-    function apply(base,map){ let out=String(base||''); for(const [t,v] of Object.entries(map)){ out=out.replace(new RegExp(esc(t),'g'),v); } return out.replace(/\n{3,}/g,'\n\n').trimEnd(); }
+    function vals(){
+      const m={};
+      for(const [t,sel] of Object.entries(F)){
+        let v=($(sel)?.value||'').trim();
+        if(t==='{Straße}') v=cleanStreet(v);
+        if(t==='{PLZ}' && !v) v=topPLZ();
+        if(t==='{Ort}' && !v) v=topCity();
+        m[t]=v;
+      }
+      return m;
+    }
+    function apply(base,map){
+      let out=String(base||'');
+      for(const [t,v] of Object.entries(map)){ out=out.replace(new RegExp(esc(t),'g'),v); }
+      return out.replace(/\n{3,}/g,'\n\n').trimEnd();
+    }
 
+    // Live-Vorschau nur für Absenderblock
     const TOKENS=['{Vorname}','{Nachname}','{Straße}','{PLZ}','{Ort}'];
-    function renderSenderPreview(){ if(!msg) return; const map=vals(); let txt=String(msg.value||''); for(const t of TOKENS){ const v=map[t]&&map[t].length?map[t]:t; txt=txt.replace(new RegExp(esc(t),'g'),v); } msg.value=txt; }
+    function renderSenderPreview(){
+      if(!msg) return;
+      const map=vals(); let txt=String(msg.value||'');
+      for(const t of TOKENS){ const v=map[t]&&map[t].length?map[t]:t; txt=txt.replace(new RegExp(esc(t),'g'),v); }
+      msg.value=txt;
+    }
     ['#first_name','#last_name','#street','#sender_zip','#sender_city','#plz','#city'].forEach(sel=>$(sel)?.addEventListener('blur',renderSenderPreview));
     document.addEventListener('DOMContentLoaded',renderSenderPreview);
 
+    // Finaler Submit
     form?.addEventListener('submit', async (e)=>{
       e.preventDefault();
       const sal  = msg?.dataset?.salutation    || 'Sehr geehrte Damen und Herren,';
       const raddr= msg?.dataset?.recipientAddr || 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin';
 
       let userText = msg?.value || '';
-      userText = userText.replace('{Anrede}', sal).replace('{MdB_Name_und_Adresse}', raddr).replace('{MdB_Adresse}', raddr);
+      userText = userText
+        .replace('{Anrede}', sal)
+        .replace('{MdB_Name_und_Adresse}', raddr)
+        .replace('{MdB_Adresse}', raddr);
 
       const finalMsg = apply(userText, vals());
-      if (/\{Vorname\}|\{Nachname\}|\{Straße\}|\{PLZ\}|\{Ort\}/.test(finalMsg)) { alert('Bitte füllen Sie Absenderfelder vollständig aus.'); return; }
 
-      const btn=form.querySelector('button[type="submit"]'); btn?.setAttribute('disabled','');
-      const fd=new FormData(form); const payload={}; fd.forEach((v,k)=>payload[k]=v);
-      payload.copy_to_self=fd.has('copy_to_self'); payload.consent_print=fd.has('consent_print'); payload.message=finalMsg;
+      if (/\{Vorname\}|\{Nachname\}|\{Straße\}|\{PLZ\}|\{Ort\}/.test(finalMsg)) {
+        alert('Bitte füllen Sie Absenderfelder vollständig aus.');
+        return;
+      }
+
+      const btn=form.querySelector('button[type="submit"]');
+      btn?.setAttribute('disabled','');
+
+      const fd=new FormData(form);
+      const payload={};
+      fd.forEach((v,k)=>payload[k]=v);
+      payload.copy_to_self  = fd.has('copy_to_self');
+      payload.consent_print = fd.has('consent_print');
+      payload.message       = finalMsg;
 
       try{
         const res=await fetch(form.action,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
-        const text=await res.text(); let data; try{data=JSON.parse(text);}catch{throw new Error(text.slice(0,200)||'Serverantwort kein JSON');}
-        if(data.ok){ const box=document.getElementById('successMessage'); if(box){ box.textContent='Danke! Ihr Brief wurde erfolgreich eingereicht. Vorgangs-ID: '+(data.queueId||''); box.style.display='block'; } form.reset(); renderSenderPreview(); }
-        else{ alert('Fehler: '+(data.error||'Unbekannt')); }
-      }catch(err){ alert('Verbindungsfehler: '+err.message); }
-      finally{ btn?.removeAttribute('disabled'); }
+        const text=await res.text();
+        let data; try{ data=JSON.parse(text); } catch{ throw new Error(text.slice(0,200)||'Serverantwort kein JSON'); }
+        if(data.ok){
+          const box=document.getElementById('successMessage');
+          if(box){ box.textContent='Danke! Ihr Brief wurde erfolgreich eingereicht. Vorgangs-ID: '+(data.queueId||''); box.style.display='block'; }
+          form.reset(); renderSenderPreview();
+        }else{
+          alert('Fehler: '+(data.error||'Unbekannt'));
+        }
+      }catch(err){
+        alert('Verbindungsfehler: '+err.message);
+      }finally{
+        btn?.removeAttribute('disabled');
+      }
     });
   })();
   </script>
 </body>
 </html>
+
+
 
 
 
